--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Panel de Admin - Reservas</title>
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
@@ -18,23 +17,23 @@
     <div class="logo-container">
       <img src="./assets/android-chrome-512x512.png" alt="Logo" class="logo-img">
       <h1 class="logo-text">Reservas confirmadas</h1>
+      <button id="logoutBtn">Cerrar sesión</button>
     </div>
 
     <div class="calendar-wrapper">
       <div class="card">
         <div id='calendar'></div>
       </div>
-
-      <button id="logoutBtn">Cerrar sesión</button>
+      <div class="card">
+        <h2>Usuarios Registrados</h2>
+        <ul id="usersList" class="user-list"></ul>
+      </div>
     </div>
   </main>
-
   <div id="toast-container"></div>
 
-  <!-- Tu propio script -->
   <script type="module" src="./js/admin.js"></script>
 
-  <!-- Código para validar sesión -->
   <script type="module">
     import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
     import { app } from './js/firebase-config.js';
@@ -49,6 +48,7 @@
       }
     });
   </script>
+
   <footer>
     <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
   </footer>
