--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   
   <h1 class="logo">Bocaraca MMA</h1>
   
-  <form id="loginForm" class="card">
+  <form id="loginForm" class="card" autocomplete="off">
     <h2>Iniciar sesión</h2>
     <label for="email">Correo Electrónico</label>
-    <input type="email" id="email" required />
+    <input type="email" id="email" required autocomplete="off" />
     <label for="password">Contraseña</label>
-    <input type="password" id="password" required />
+    <input type="password" id="password" required autocomplete="off" />
     <button type="submit">Iniciar sesión</button>
     <p>¿No tienes cuenta? <a href="./register.html">Regístrate</a></p>
     
