--- a/register.html
+++ b/register.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Registro - Bocaraca MMA</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
@@ -11,48 +10,59 @@
 <body>
 
 <main class="container">
-  <!-- Logo Imagen -->
+  <!-- Logo -->
   <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img">
-  
   <h1 class="logo">Bocaraca MMA</h1>
-  
-  <form id="registerForm" class="card">
+
+  <!-- Formulario de registro -->
+  <form id="registerForm" class="card" autocomplete="off">
     <h2>Registro</h2>
-    <label for="full_name">Nombre Completo</label>
-    <input type="text" id="full_name" required />
+  
+    <label for="nombre">Nombre Completo</label>
+    <input type="text" id="nombre" name="fullName" required autocomplete="off">
+  
     <label for="cedula">Cédula</label>
-    <input type="text" id="cedula" required />
+    <input type="text" id="cedula" name="cedula" required autocomplete="off">
+  
     <label for="phone">Celular</label>
-    <input type="tel" id="phone" required />
+    <input type="tel" id="phone" name="phone" required autocomplete="off">
+  
     <label for="email">Correo Electrónico</label>
-    <input type="email" id="email" required />
+    <input type="email" id="email" name="email" required autocomplete="off">
+  
     <label for="password">Contraseña</label>
-    <input type="password" id="password" required />
+    <input type="password" id="password" name="password" required autocomplete="off">
+  
     <button type="submit">Registrarse</button>
+  
     <p>¿Ya tienes cuenta? <a href="./index.html">Inicia sesión</a></p>
   </form>
 </main>
 
-<!-- Scripts -->
-<script type="module" src="./js/register.js"></script>
+<!-- Toast Container -->
 <div id="toast-container"></div>
 
+<!-- Script principal de registro -->
+<script type="module" src="./js/register.js"></script>
+
+<!-- Redirección automática si ya está logueado -->
 <script type="module">
   import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
   import { app } from './js/firebase-config.js';
 
   const auth = getAuth(app);
-
   onAuthStateChanged(auth, (user) => {
-    // Verifica si el usuario está autenticado
     if (user) {
-      // Si el usuario está autenticado y está en la página de registro, redirige al dashboard o página principal
-      if (window.location.pathname !== './register.html') {
-        window.location.href = './index.html'; // o la página correspondiente
-      }
+      const adminEmails = ["luis.davidsolorzano@outlook.es", "ivan.cicc@hotmail.com"];
+      const destination = adminEmails.includes(user.email)
+        ? './admin-dashboard.html'
+        : './client-dashboard.html';
+      window.location.href = destination;
     }
   });
 </script>
+
+<!-- Footer -->
 <footer>
   <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
 </footer>
