--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -7,31 +7,55 @@
   <link href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css" rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/locales/es.js"></script>
-
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
 </head>
 
 <body>
+
+    <!-- Botón hamburguesa -->
+  <button id="toggleNav" class="hamburger-btn">☰</button>
+
+  <!-- Navbar lateral -->
+  <nav id="sidebar" class="sidebar hidden">
+    <ul>
+      <li><a href="./admin-dashboard.html">Inicio</a></li>
+      <li><a href="./usuarios.html">Usuarios</a></li>
+      <li><a href="./reportes.html">Reportes</a></li>
+      <li><a href="#" id="logoutSidebar">Cerrar sesión</a></li>
+    </ul>
+  </nav>
+
   <main class="container">
     <div class="logo-container">
       <img src="./assets/android-chrome-512x512.png" alt="Logo" class="logo-img">
       <h1 class="logo-text">Reservas confirmadas</h1>
-      <button id="logoutBtn">Cerrar sesión</button>
     </div>
 
     <div class="calendar-wrapper">
       <div class="card">
-        <div id='calendar'></div>
-      </div>
-      <div class="card">
-        <h2>Usuarios Registrados</h2>
-        <ul id="usersList" class="user-list"></ul>
+        <div id='calendar-admin'></div>
       </div>
     </div>
   </main>
+
+    <!-- Pop-up para mostrar la lista de usuarios y marcar asistencia -->
+  <div id="asistenciaPopup" class="asistencia-modal">
+    <div class="modal-content">
+        <h3>Asistencia para el día: <span id="fechaReserva"></span></h3>
+        <ul id="listaUsuarios">
+            <!-- Los usuarios con sus checkboxes aparecerán aquí -->
+        </ul>
+        <button id="cerrarPopupBtn">Cerrar</button>
+    </div>
+  </div>
+
   <div id="toast-container"></div>
 
+  <!-- Agrega esto en el head o justo antes de tu script admin.js -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Después carga tu admin.js -->
   <script type="module" src="./js/admin.js"></script>
 
   <script type="module">
