--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -9,6 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/locales/es.js"></script>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
@@ -17,17 +18,18 @@
 
 <!-- Botón hamburguesa -->
 <button id="toggleNav" class="hamburger-btn" aria-label="Menú">
-  <i data-lucide="menu"></i>
+  <i class="bi bi-list"></i>
 </button>
-<!-- Navbar lateral moderna -->
+
 <nav id="sidebar" class="sidebar">
   <ul>
-    <li><a href="./admin-dashboard.html"><span>🏠</span> Inicio</a></li>
-    <li><a href="./usuarios.html"><span>👥</span> Usuarios</a></li>
-    <li><a href="./reportes.html"><span>📄</span> Reportes</a></li>
-    <li><a href="#" id="logoutSidebar"><span>🚪</span> Cerrar sesión</a></li>
+    <li><a href="./admin-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
+    <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i>Usuarios</a></li>
+    <li><a href="./reportes2.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+    <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
   </ul>
 </nav>
+
 
   <main class="container">
     <div class="logo-container">
