--- a/register.html
+++ b/register.html
@@ -2,41 +2,48 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta http-equiv="Cache-Control" content="no-store" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Registro - Bocaraca MMA</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
+
 <body>
 
 <main class="container">
-  <!-- Logo -->
-  <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img">
-  <h1 class="logo">Bocaraca MMA</h1>
+    <div class="container">
+      <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img" />
+      <p class="company-name">Bocaraca MMA</p>
+    </div>
+  <div class="container">
+    <!-- Formulario de registro -->
+    <form id="registerForm" autocorrect="off" autocapitalize="off" spellcheck="false" novalidate class="card" autocomplete="off" >
+      <h2>Registro</h2>
 
-  <!-- Formulario de registro -->
-  <form id="registerForm" class="card" autocomplete="off">
-    <h2>Registro</h2>
-  
-    <label for="nombre">Nombre Completo</label>
-    <input type="text" id="nombre" name="fullName" required autocomplete="off">
-  
-    <label for="cedula">Cédula</label>
-    <input type="text" id="cedula" name="cedula" required autocomplete="off">
-  
-    <label for="phone">Celular</label>
-    <input type="tel" id="phone" name="phone" required autocomplete="off">
-  
-    <label for="email">Correo Electrónico</label>
-    <input type="email" id="email" name="email" required autocomplete="off">
-  
-    <label for="password">Contraseña</label>
-    <input type="password" id="password" name="password" required autocomplete="off">
-  
-    <button type="submit">Registrarse</button>
-  
-    <p>¿Ya tienes cuenta? <a href="./index.html">Inicia sesión</a></p>
-  </form>
+      <label for="nombre">Nombre Completo</label>
+      <input type="text" id="nombre" name="fullName" required autocomplete="off" placeholder="Ej: Juan Pérez" oninput="this.value = this.value.replace(/[^a-zA-ZáéíóúÁÉÍÓÚñÑ\s]/g, '')">
+
+      <label for="cedula">Cédula</label>
+      <input type="text" id="cedula" inputmode="numeric" name="cedula" required maxlength="9" oninput="formatearCedula(this)" required autocomplete="off" placeholder="Ej: X0XXX0XXX">
+
+      <label for="phone">Celular</label>
+      <input type="tel" id="phone" inputmode="numeric" name="phone" required maxlength="8" oninput="formatearCelular(this)" required autocomplete="off" placeholder="Ej: 12345678" >
+
+      <label for="email">Correo Electrónico</label>
+      <input type="email" id="email" name="email" required autocomplete="off">
+
+      <label for="password">Contraseña</label>
+      <input type="password" id="password" name="password" required autocomplete="off" autocomplete="new-password">
+
+      <button type="submit">Registrarse</button>
+      <p>¿Ya tienes cuenta? <a href="./index.html">Inicia sesión</a></p>
+    </form>
+  </div>
 </main>
 
 <!-- Toast Container -->
@@ -51,20 +58,34 @@
   import { app } from './js/firebase-config.js';
 
   const auth = getAuth(app);
-  onAuthStateChanged(auth, (user) => {
-    if (user) {
-      const adminEmails = ["luis.davidsolorzano@outlook.es", "ivan.cicc@hotmail.com"];
-      const destination = adminEmails.includes(user.email)
-        ? './admin-dashboard.html'
-        : './client-dashboard.html';
-      window.location.href = destination;
-    }
-  });
+  const pathname = window.location.pathname;
+
+  // Evita ejecutar esto si estás en register.html
+  if (!pathname.includes("register.html")) {
+    onAuthStateChanged(auth, (user) => {
+      if (user) {
+        const adminEmails = ["luis.davidsolorzano@outlook.es", "ivan.cicc@hotmail.com"];
+        const destination = adminEmails.includes(user.email)
+          ? './admin-dashboard.html'
+          : './client-dashboard.html';
+        window.location.href = destination;
+      }
+    });
+  }
+
+  function formatearCedula(input) {
+    input.value = input.value.replace(/\D/g, '').slice(0, 9); // solo números, máx 9 dígitos
+  }
+
+  function formatearCelular(input) {
+    input.value = input.value.replace(/\D/g, '').slice(0, 8); // solo números, máx 8 dígitos
+  }
+
 </script>
 
 <!-- Footer -->
 <footer>
-  <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
+  <p class="footer">© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
 </footer>
 </body>
 </html>
