--- a/reportes.html
+++ b/reportes.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reportes - Asistencia Mensual</title>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="./css/style.css">
   <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon">
   <script src="https://unpkg.com/lucide@latest"></script>
@@ -12,20 +12,21 @@
 
 </head>
 <body>
+
 <!-- Botón hamburguesa -->
 <button id="toggleNav" class="hamburger-btn" aria-label="Menú">
-  <i data-lucide="menu"></i>
+  <i class="bi bi-list"></i>
 </button>
 
-<!-- Navbar lateral moderna -->
 <nav id="sidebar" class="sidebar">
   <ul>
-    <li><a href="./admin-dashboard.html"><span>🏠</span> Inicio</a></li>
-    <li><a href="./usuarios.html"><span>👥</span> Usuarios</a></li>
-    <li><a href="./reportes.html"><span>📄</span> Reportes</a></li>
-    <li><a href="#" id="logoutSidebar"><span>🚪</span> Cerrar sesión</a></li>
+    <li><a href="./admin-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
+    <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i> Usuarios</a></li>
+    <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+    <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
   </ul>
 </nav>
+
 
   <div class="main-content">
     <div class="container">
@@ -49,7 +50,7 @@
           <option value="12">Diciembre</option>
           <!-- Agregar más meses -->
         </select>
-        <button onclick="getAsistencia('2025-05-10')">Ver reporte</button>
+        <button onclick="getAsistencia()">Ver reporte</button>
       </div>
 
             <div style="margin-top: 1rem; text-align: center;">
@@ -69,97 +70,8 @@
   <script src="https://cdn.jsdelivr.net/npm/firebase@9.1.2/dist/firebase-app.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/firebase@9.1.2/dist/firebase-firestore.js"></script>
 
-<script type="module">
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
-  import { app } from './js/firebase-config.js';
-  import { getFirestore, collection, getDocs, doc } from "https://www.gstatic.com/firebasejs/9.1.2/firebase-firestore.js";
-  import { setupInactivityTimeout } from './js/auth-timeout.js';
 
-  const auth = getAuth(app);
-  const db = getFirestore(app);
-
-  setupInactivityTimeout(); // por defecto 5 minutos
-
-  // Comprobación de autenticación
-  onAuthStateChanged(auth, (user) => {
-    if (!user) {
-      window.location.href = './index.html';
-    } else {
-      console.log("Admin autenticado:", user.email);
-    }
-  });
-
-  // Función para obtener la asistencia mensual
-  async function getAsistencia() {
-    console.log("Iniciando la obtención de asistencia...");
-
-    const month = document.getElementById('monthSelect').value;
-    console.log("Mes seleccionado:", month);
-
-    try {
-      const asistenciaRef = collection(db, 'asistencias');
-      console.log("Referencia a la colección 'asistencias' obtenida correctamente");
-
-      const snapshot = await getDocs(asistenciaRef);
-      console.log("Documentos de asistencia obtenidos:", snapshot.docs.length);
-
-      let totalUsuarios = 0;
-      let totalPresentes = 0;
-      const asistenciaData = [];
-
-      snapshot.forEach(doc => {
-        const fecha = doc.id;
-        console.log("Procesando documento con fecha:", fecha);
-
-        if (fecha.startsWith('2025-' + month)) { // Filtrar por mes
-          console.log("Fecha correspondiente al mes actual:", fecha);
-          const usuarios = doc.data().usuarios;
-
-          Object.keys(usuarios).forEach(uid => {
-            const user = usuarios[uid];
-            const presente = user.presente ? 1 : 0;
-            totalUsuarios++;
-            totalPresentes += presente;
-
-            asistenciaData.push({
-              nombre: user.nombre,
-              asistencia: presente ? 'Presente' : 'Ausente',
-              porcentaje: (presente / totalUsuarios) * 100
-            });
-          });
-        }
-      });
-
-      console.log("Datos de asistencia procesados:", asistenciaData);
-
-      // Mostrar la tabla
-      const tableBody = document.getElementById('asistenciaTableBody');
-      tableBody.innerHTML = ''; // Limpiar tabla antes de llenarla
-
-      asistenciaData.forEach(data => {
-        const row = document.createElement('tr');
-        row.innerHTML = `
-          <td>${data.nombre}</td>
-          <td>${data.asistencia}</td>
-          <td>${data.porcentaje.toFixed(2)}%</td>
-        `;
-        tableBody.appendChild(row);
-      });
-
-      console.log("Tabla de asistencia mostrada correctamente");
-    } catch (error) {
-      console.error("Error al obtener los datos de asistencia:", error);
-    }
-  }
-
-  // Mostrar/ocultar navbar
-  document.getElementById("toggleNav").addEventListener("click", () => {
-    document.getElementById("sidebar").classList.toggle("active");
-  });
-
-</script>
-
-  
+  <script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
   <script type="module" src="./js/reportes.js"></script>
   <script type="module" src="./js/descargar-reportes.js"></script>
 
