--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -22,12 +22,13 @@
 </button>
 
 <nav id="sidebar" class="sidebar">
-  <ul>
-    <li><a href="./admin-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
-    <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i>Usuarios</a></li>
-    <li><a href="./reportes2.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
-    <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
-  </ul>
+    <ul>
+      <li><a href="./admin-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
+      <li><a href="./usuarios.html"><i class="bi bi-people-fill"></i> Usuarios</a></li>
+      <li><a href="./marcar-asistencia.html"><i class="bi bi-file-earmark-text-fill"></i> Asistencias </a></li>
+      <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+      <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
+    </ul>
 </nav>
 
 
