--- a/control-mensualidades.html
+++ b/control-mensualidades.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Control de Mensualidades</title>
+
+  <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <!-- Tu CSS global -->
   <link rel="stylesheet" href="./css/style.css" />
-<link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon"/>
+  <link rel="icon" href="./assets/favicon-32x32.png" type="image/x-icon"/>
   <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
@@ -24,21 +27,50 @@
       <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
       <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
       <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i>Crear Evento</a></li>
+      <li><a href="./admin-products.html"><i class="bi bi-bag-fill"></i>Tienda</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
   </nav>
 
   <div class="calendar-wrapper">
-    <main class="card">
+    <main id="mensualidades" class="card">
       <img src="./assets/android-chrome-512x512.png" class="logo-img" alt="Logo">
       <h1>Control de Mensualidades</h1>
 
+    <!-- Barra de filtros (estilo igual a Usuarios) -->
+    <div class="users-filters" style="margin-top:.25rem;">
+      <label>
+        Estado
+        <select id="filterState" class="dark-select">
+          <option value="all">Todos</option>
+          <option value="activo">Activos</option>
+          <option value="proxima">Próxima a vencer</option>
+          <option value="vencida">Vencidos</option>
+        </select>
+      </label>
+
+      <label>
+        Orden
+        <select id="sortBy" class="dark-select">
+          <option value="az">Nombre A → Z</option>
+          <option value="za">Nombre Z → A</option>
+        </select>
+      </label>
+    </div>
+
+
+      <!-- tabla (desktop) / tarjetas (móvil) -->
       <div class="table-container">
         <table id="mensualidades-table" class="asistencia-table">
           <thead>
             <tr>
-              <th>Nombre</th><th>Correo</th><th>Autorizado</th>
-              <th>Expira</th><th>Estado</th><th>Mes a pagar</th><th>Acción</th>
+              <th>Nombre</th>
+              <th>Correo</th>
+              <th>Autorizado</th>
+              <th>Expira</th>
+              <th>Estado</th>
+              <th>Mes a pagar</th>
+              <th>Acción</th>
             </tr>
           </thead>
           <tbody></tbody>
@@ -51,12 +83,8 @@
     <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
   </footer>
 
-  <!-- EmailJS SDK -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
-  <script>
-    emailjs.init("TU_USER_ID_EMAILJS");
-  </script>
-
   <script type="module" src="./js/control-mensualidades.js"></script>
+  <!-- Bootstrap JS (bundle con Popper) por si lo necesitas en otras pantallas -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
