--- a/events.html
+++ b/events.html
@@ -65,7 +65,9 @@
   <nav id="sidebar" class="sidebar">
     <ul>
       <li><a href="./client-dashboard.html"><i class="bi bi-house-fill"></i> Inicio</a></li>
+      <li><a href="./profile.html"><i class="bi bi-person-badge-fill"></i> Perfil</a></li>
       <li><a href="./events.html"><i class="bi bi-calendar-event"></i> Eventos</a></li>
+      <li><a href="./store.html"><i class="bi bi-bag-fill"></i> Tienda</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
   </nav>
@@ -116,6 +118,7 @@
     <p>© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
   </footer>
 
+  <script type="module" src="./js/notifications.js"></script>
   <!-- Bootstrap Bundle (JS + Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Lógica de Firebase + eventos -->
