--- a/index.html
+++ b/index.html
@@ -7,47 +7,128 @@
 
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="icon" type="image/png" href="./assets/favicon.ico" />
-  
 </head>
 <body>
-  
+
   <main class="container">
-    <div class="container">
+    <!-- Logo + nombre como ya lo tenías -->
+    <div class="container" style="text-align:center">
       <img src="./assets/android-chrome-512x512.png" alt="Logo Bocaraca MMA" class="logo-img" />
       <p class="company-name">Bocaraca MMA</p>
     </div>
-    <div class="container">
-      <form id="loginForm" class="card" autocomplete="off">
-    <h2>Iniciar sesión</h2>
-    <label for="email">Correo Electrónico</label>
-    <input type="email" id="email" required autocomplete="off" />
-    <label for="password">Contraseña</label>
-    <input type="password" id="password" required autocomplete="off" />
-    <button type="submit">Iniciar sesión</button>
-    <p>¿No tienes cuenta? <a href="./register.html">Regístrate</a></p>
-    
-    <!-- Enlace a cambiar contraseña, inicialmente oculto -->
-    <p id="forgotPasswordLink" style="display: none;">
-      <a href="./change-password.html">¿Olvidaste tu contraseña?</a>
-    </p>
-      </form>
+
+    <!-- Card con pestañas -->
+    <div class="card auth-card">
+
+      <!-- Tabs -->
+      <div class="auth-tabs">
+        <button class="auth-tab active" data-target="#tab-login">Ingreso</button>
+        <button class="auth-tab" data-target="#tab-prices">Precios</button>
+      </div>
+
+      <!-- Panel: Ingreso (tu formulario tal cual) -->
+      <section id="tab-login" class="auth-panel active">
+        <form id="loginForm" autocomplete="off">
+          <h2>Iniciar sesión</h2>
+
+          <label for="email">Correo Electrónico</label>
+          <input type="email" id="email" required autocomplete="off" />
+
+          <label for="password">Contraseña</label>
+          <input type="password" id="password" required autocomplete="off" />
+
+          <button type="submit">Iniciar sesión</button>
+
+          <p>¿No tienes cuenta? <a href="./register.html">Regístrate</a></p>
+
+          <!-- Enlace a cambiar contraseña, inicialmente oculto -->
+          <p id="forgotPasswordLink" style="display:none;">
+            <a href="./change-password.html">¿Olvidaste tu contraseña?</a>
+          </p>
+        </form>
+      </section>
+
+      <!-- Panel: Precios (solo informativo) -->
+      <section id="tab-prices" class="auth-panel">
+        <div class="pricing-grid">
+          <!-- Plan 1 -->
+          <article class="price-card">
+            <header class="price-head head-blue">
+              <h4 class="price-title">Clases Privadas</h4>
+            </header>
+            <div class="price-body">
+              <div class="price-amount">
+                $50 <small>/mes</small>
+              </div>
+              <ul class="price-list">
+                <li>• 3 clases Extra por semana</li>
+                <li>• Clases 8:30pm </li>
+                <li>• Lunes, Martes y Jueves </li>
+                <li>• Principiantes / Avanzados</li>
+                <!--<li class="muted">• Competitivo</li> -->
+              </ul>
+              <div class="price-cta">
+                <!--<span class="pill muted">Informativo</span>-->
+              </div>
+            </div>
+          </article>
+
+          <!-- Plan 2 -->
+          <article class="price-card">
+            <header class="price-head head-green">
+              <h4 class="price-title">Plan Mensual</h4>
+            </header>
+            <div class="price-body">
+              <div class="price-amount">
+                $40 <small>/mes</small>
+              </div>
+              <ul class="price-list">
+                <li>• 2 Clases semanales</li>
+                <li>• Viernes 8:30pm </li>
+                <li>• Sabados 9:00am </li>
+                <li>• Principiantes / Intermedios </li>
+              </ul>
+              <div class="price-cta">
+                <span class="pill success">Recomendado</span>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
     </div>
   </main>
 
-  <!-- Scripts -->
-<script type="module" src="./js/login.js"></script>
-<script type="module">
-  // Importa la configuración de Firebase desde firebase-config.js
-  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
-  import { app } from './js/firebase-config.js';  // Importamos correctamente 'app'
+  <!-- Scripts de tu app -->
+  <script type="module" src="./js/login.js"></script>
+  <script type="module">
+    import { getAuth } from "https://www.gstatic.com/firebasejs/9.0.0/firebase-auth.js";
+    import { app } from './js/firebase-config.js';
+    const auth = getAuth(app);
+  </script>
 
-  // Inicializa la autenticación
-  const auth = getAuth(app);
-</script>
+  <!-- Toggle de pestañas: simple y sin dependencias -->
+  <script>
+    document.addEventListener('DOMContentLoaded', () => {
+      const tabs = document.querySelectorAll('.auth-tab');
+      const panels = document.querySelectorAll('.auth-panel');
 
-<footer>
-  <p class="footer">© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
-</footer>
+      tabs.forEach(btn => {
+        btn.addEventListener('click', () => {
+          // activar botón
+          tabs.forEach(b => b.classList.remove('active'));
+          btn.classList.add('active');
 
+          // activar panel
+          const target = btn.getAttribute('data-target');
+          panels.forEach(p => p.classList.remove('active'));
+          document.querySelector(target).classList.add('active');
+        });
+      });
+    });
+  </script>
+
+  <footer>
+    <p class="footer">© 2025 <a href="https://github.com/luisillo1cr" target="_blank">luisillo1cr</a>. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
