--- a/usuarios.html
+++ b/usuarios.html
@@ -27,6 +27,7 @@
       <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
       <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
       <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i>Crear Evento</a></li>
+      <li><a href="./admin-products.html"><i class="bi bi-bag-fill"></i>Tienda</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
 </nav>
@@ -36,8 +37,29 @@
     <main class="card">
         <img src="./assets/android-chrome-512x512.png" alt="Logo" class="logo-img">
         <h1>Usuarios Registrados</h1>
+        
+        <!-- Barra de filtros -->
+        <div class="users-filters">
+          <label>
+            Estado
+            <select id="filterState" class="dark-select">
+              <option value="all">Todos</option>
+              <option value="auth">Autorizados</option>
+              <option value="noauth">No autorizados</option>
+            </select>
+          </label>
+
+          <label>
+            Orden
+            <select id="sortBy" class="dark-select">
+              <option value="az">Nombre A → Z</option>
+              <option value="za">Nombre Z → A</option>
+            </select>
+          </label>
+        </div>
+
         <div class="table-container">
-        <table id="usuarios-table">
+        <table id="usuarios-table" class="asistencia-table">
           <thead>
               <tr>
                 <th>Nombre</th>
