--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -37,6 +37,7 @@
       <li><a href="./admin-users.html"><i class="bi bi-person-rolodex"></i></i> Roles</a></li>
       <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
       <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+      <li><a href="./admin-metrics.html"><i class="bi bi-pie-chart-fill"></i></i> Metricas</a></li>
       <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i>Crear Evento</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
