--- a/admin-events.html
+++ b/admin-events.html
@@ -151,6 +151,7 @@
       <li><a href="./admin-users.html"><i class="bi bi-person-rolodex"></i></i> Roles</a></li>
       <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
       <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+      <li><a href="./admin-metrics.html"><i class="bi bi-pie-chart-fill"></i></i> Metricas</a></li>
       <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i>Crear Evento</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
@@ -160,7 +161,6 @@
   <main class="event-container">
 
     <div class="logo-container">
-      <img src="./assets/android-chrome-512x512.png" alt="Logo" class="logo-img"/>
       <h1>Gestión de Eventos</h1>
     </div>
 
