--- a/admin-users.html
+++ b/admin-users.html
@@ -99,6 +99,7 @@
       <li class="admin-only"><a href="./admin-users.html"><i class="bi bi-person-rolodex"></i> Roles</a></li>
       <li><a href="./marcar-asistencia.html"><i class="bi bi-person-bounding-box"></i> Asistencias</a></li>
       <li><a href="./reportes.html"><i class="bi bi-file-earmark-text-fill"></i> Reportes</a></li>
+      <li><a href="./admin-metrics.html"><i class="bi bi-pie-chart-fill"></i></i> Metricas</a></li>
       <li><a href="./admin-events.html"><i class="bi bi-calendar-week"></i> Crear Evento</a></li>
       <li><a href="#" id="logoutSidebar"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a></li>
     </ul>
@@ -106,7 +107,6 @@
 
   <header class="header">
     <div class="logo">
-      <img src="./assets/android-chrome-512x512.png" alt="Logo" class="logo-img">
     </div>
     <h1 class="page-title">Panel de Usuarios</h1>
   </header>
